--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
+*.env
 .env.backup
 .env.production
 .phpunit.result.cache
@@ -16,6 +16,3 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
-bootstrap/cache/packages.php
-bootstrap/cache/services.php
-
